# GitHelp

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  README_shorter.md  docker-compose.local.yml  docker-compose.yml  githelp_eval_expected_sources.example.json  githelp_eval_questions.txt  githelp_eval_results_new.txt  pyproject.toml
.streamlit/: config.toml
.venv-docask/: pyvenv.cfg
app/: streamlit_app.py  streamlit_display.py  streamlit_project_setup.py  streamlit_sidebar.py  streamlit_state.py  streamlit_theme.py
configs/: app_config.yaml  indexing_config.yaml  mmore_index_config.yaml  mmore_retriever_config.yaml  project_config.yaml
docs/: conf.py  index.md
scripts/: answer_question.py  build_corpus.py  build_index.py  debug_prompting.py  debug_retrieval.py  evaluate_retrieval.py  export_mmore_corpus.py  extract_code_docs.py  load_github_repository.py  prepare_answer.py  prepare_github_project.py  preview_corpus.py  test_prompting.py  test_qwen.py  test_retrieval.py
tests/: test_answering_pipeline.py  test_config.py  test_corpus_builder.py  test_data_models.py  test_generic_project_profile.py  test_github_loader.py  test_integration_tiny_repo_pipeline.py  test_llm_providers.py  test_load_corpus.py  test_markdown_loader.py  test_mmore_indexer.py  test_mmore_project_profile.py  test_mmore_retriever.py  test_project_builder.py  test_project_state.py  test_prompting.py  test_python_doc_extractor.py  test_retrieval_eval.py  test_retriever.py  test_retriever_factory.py  test_simple_retriever.py  test_streamlit_app.py  test_streamlit_theme.py  (+1 more)
(+97 files in other folders)
