[project]
name = "githelp"
version = "0.1.0"
description = "Conversational interface for querying project documentation with MMORE"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pyyaml",
    "pydantic",
    "pytest",
    "streamlit",
    "python-dotenv",
    "transformers>=4.51.0,<5",
    "accelerate",
    "torch",
    "langchain-community",
    "mmore[index,rag]==1.2.4",
    "docker==7.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src", "app"]
testpaths = ["tests"]
